# felide.old

./: CMakeLists.txt  cmake.json  cpp.json  felide.kdev4  glsl.json  ide.json  scintilla.json
sources/: CMakeLists.txt
sources/core/: CMakeLists.txt
sources/core/felide/: Application.cpp  Application.hpp  Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp
sources/felide-borc/: CMakeLists.txt
sources/felide-borc/felide/: Borc.cpp
sources/felide-qt5/: CMakeLists.txt
sources/felide-qt5/felide/: ClassBrowser.cpp  ClassBrowser.hpp  DocumentManager.cpp  DocumentManager.hpp  MainPanel.cpp  MainPanel.hpp  MainWindow.cpp  MainWindow.hpp  ProjectBrowser.cpp  ProjectBrowser.hpp  QtApplication.cpp  QtApplication.hpp
sources/felide-win/: CMakeLists.txt
sources/felide-win/felide/: CApplication.cpp  CApplication.hpp  CMainFrame.cpp  CMainFrame.hpp  WinApplication.cpp  WinApplication.hpp  WinMainFrame.cpp  WinMainFrame.hpp
sources/libborc/: CMakeLists.txt
sources/libborc/felide/: CommandTask.cpp  CommandTask.hpp  DirectoryTask.cpp  DirectoryTask.hpp  Project.cpp  Project.hpp  Task.cpp  Task.hpp  ToolChain.cpp  ToolChain.hpp  ToolChainCpp.cpp  ToolChainCpp.hpp  Version.cpp  Version.hpp
sources/libcore/: CMakeLists.txt
sources/libcore/felide/: Application.cpp  Application.hpp  FileUtil.cpp  FileUtil.hpp  Item.cpp  Item.hpp  Menu.cpp  Menu.hpp  Plugin.hpp  PluginManager.hpp  Project.cpp  Project.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManagerImpl.cpp  ResourceManagerImpl.hpp  Target.cpp  Target.hpp
sources/wcl/: CMakeLists.txt
sources/wcl/wcl/: AcceleratorTable.hpp  Application.hpp  Bitmap.hpp  Button.hpp  COMApplication.hpp  COMException.hpp  COMResult.hpp  Dialog.hpp  Edit.hpp  Exception.hpp  FileDialog.hpp  Frame.hpp  ImageList.hpp  Menu.hpp  Module.hpp  Rect.hpp  Scintilla.hpp  Sizer.hpp  Static.hpp  String.hpp  TabControl.hpp  TreeView.hpp  Window.hpp  WindowBase.hpp  WindowClass.hpp  WindowHandle.hpp  wcl.hpp
sources/wclc/: Compiler.cpp
src/: CMakeLists.txt  Doxyfile
src-old/felide.view/: CMakeLists.txt
src-old/felide.view/felide/: Editor.hpp  Frame.cpp  FrameHandler.cpp  Menu.cpp  Shortcut.hpp  ViewFactory.hpp
src/FileExplorer/: CMakeLists.txt  FileExplorer.cpp  FileExplorer.hpp  TreeItem.cpp  TreeItem.hpp  TreeModel.cpp  TreeModel.hpp
src/felide/: App.cpp  App.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Collection.hpp  Common.hpp  Config.cpp  Config.hpp  Dictionary.hpp  Felide.cpp  Language.cpp  Language.hpp  Lexer.cpp  Lexer.hpp  LexerConstants.cpp  LexerConstants.hpp  Main.cpp  Predef.hpp  Project.cpp  Project.hpp  ProjectItem.cpp  ProjectItem.hpp  Toolchain.cpp  Toolchain.hpp  Workspace.cpp  Workspace.hpp  felide.cpp
src/felide.core/: CMakeLists.txt
src/felide.core.gtk3/: CMakeLists.txt
src/felide.core.qt5/: CMakeLists.txt
src/felide.core.win32/: CMakeLists.txt
src/felide.core/felide/: Application.cpp  Application.hpp  ArbitraryLocator.cpp  Common.hpp  Config.hpp  FileUtil.cpp  FileUtil.hpp  Locator.hpp  PathEnvLocator.cpp  Plugin.hpp  PluginManagerImpl.cpp  Project.hpp  RefCounted.cpp  RefCounted.hpp
src/felide.editor/: Application.cpp  Application.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  Dialog.hpp  DialogFactory.cpp  DialogFactory.hpp  Editor.cpp  Editor.hpp  Handler.cpp  Main.cpp  MainFrame.cpp  MainFrame.hpp  MainFrameHandler.cpp  MainFrameHandler.hpp  View.cpp  View.hpp
src/felide.editor.gtk3/: CMakeLists.txt
src/felide.editor.qt5/: CMakeLists.txt
src/felide.editor.win32/: Application.cpp  CMakeLists.txt
src/felide.editor.win32/felide/: EditorMain.cpp
src/felide.editor/felide/: Application.hpp  Editor.hpp  Handler.hpp  MainFrame.hpp  MainFrameHandler.cpp
src/felide.editor/qt5/: Application.cpp  Application.hpp  Editor.cpp  Editor.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QApplication.cpp  QApplication.hpp  QDialogFactory.cpp  QDialogFactory.hpp  QEditor.cpp  QEditor.hpp  QMainFrame.cpp  QMainFrame.hpp  QMainFrame.ui  QMainWindow.cpp  QMainWindow.hpp  QTabbedEditor.cpp  QTabbedEditor.hpp  TabbedEditor.cpp  TabbedEditor.hpp
src/felide.editor/win32xx/: Application.cpp  Application.hpp  CApplication.cpp  (+45 more)
src/felide.ide/: CMakeLists.txt
src/felide.proj.cmake/: CMakeLists.txt  WorkspaceCMake.hpp
src/felide.proj.impl/: CMakeLists.txt  WorkspaceImpl.cpp
src/felide.qt5/: AppImpl.cpp  AppImpl.hpp  CMakeLists.txt  DialogFactoryImpl.cpp  DialogFactoryImpl.hpp  EditorImpl.cpp  EditorImpl.hpp  MainFrameImpl.cpp  MainFrameImpl.hpp  MainPanel.cpp  MainPanel.hpp  OutputWindow.hpp  TabbedEditor.cpp  TabbedEditor.hpp  WorkspaceModel.cpp  WorkspaceModel.hpp  WorkspaceView.cpp  WorkspaceView.hpp
src/felide.system/: CMakeLists.txt
src/felide.view/: CMakeLists.txt
src/felide.view.qt5/: CMakeLists.txt
src/felide.view.win32/: CMakeLists.txt
src/felide.wcl/: CMakeLists.txt  WAppImpl.cpp  WAppImpl.hpp  WDialogFactory.cpp  WDialogFactory.hpp  WEditor.cpp  WEditor.hpp  WMainFrame.cpp  WMainFrame.hpp  WMainFrame.ui.cpp  ad345m5a.0ej~
src/felide.windows/: CMakeLists.txt
src/felide2/: CMakeLists.txt
src/felide_old/: Config.cpp  Language.cpp  Language.hpp  Workspace.cpp
src/felidetor/: CMakeLists.txt  felidetor.cpp
src/model/: CMakeLists.txt  model.cpp
src/pom/: Builder.cpp  BuilderGCC.hpp  BuilderVC.cpp  BuilderVC.hpp  CMakeLists.txt  Item.cpp  Item.hpp  Language.cpp  Language.hpp  Project.cpp  Project.hpp  ProjectType.cpp  ProjectType.hpp  Workspace.cpp  Workspace.hpp  pom.cpp  pom.hpp
src/wcl/: AcceleratorTable.hpp  Application.hpp  Bitmap.hpp  Button.hpp  CMakeLists.txt  COMApplication.hpp  COMException.hpp  Dialog.hpp  Edit.hpp  Exception.hpp  FileDialog.hpp  Frame.hpp  ImageList.hpp  Menu.hpp  Module.hpp  Rect.hpp  Scintilla.cpp  Scintilla.hpp  Sizer.hpp  Static.hpp  TabControl.hpp  TreeView.hpp  Window.hpp  WindowBase.hpp  WindowClass.hpp  wcl.hpp
src/wclc/: CMakeLists.txt  CompilerXML.cpp  CompilerXML.hpp  Generator.cpp  HeaderTemplate.cpp  HeaderTemplate.hpp  Parser.cpp  ParserXML.cpp  ParserXML.hpp  SourceTemplate.hpp  wclc.cpp
(+400 files in other folders)
