
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT (felide)

# Project options
OPTION (FELIDE_GEN_QT5 "Enable QT5 based user interface" OFF)
OPTION (FELIDE_GEN_WIN32 "Enable ray WinAPI-based user interface" OFF)

# Boost
ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)

SET (Boost_USE_STATIC_LIBS OFF)
SET (Boost_USE_MULTITHREADED ON)
SET (Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE (Boost COMPONENTS filesystem system REQUIRED)

# Include dirs
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES (felide.core)

ADD_SUBDIRECTORY (felide.core)
ADD_SUBDIRECTORY (felide)
ADD_SUBDIRECTORY (felidetor)

IF (FELIDE_GEN_WIN32)
    ADD_SUBDIRECTORY (felide.view.win32)
ENDIF()

IF (FELIDE_GEN_QT5)
    ADD_SUBDIRECTORY (felide.view.qt5)
ENDIF()
